--- a/data/blog/2021-11-26-bca-network-partners-with-meson-network-on-web3-0-decentralized-bandwidth-solution.mdx
+++ b/data/blog/2021-11-26-bca-network-partners-with-meson-network-on-web3-0-decentralized-bandwidth-solution.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: Meson Network and BCA Network have reached a strategic partnership on integrating decentralized storage for Web3.0 users from anywhere in the world. Meson Network is a bandwidth marketplace helping the demand sides to accelerate the contents by distributed terminals. Meson currently has more than 30,000 nodes globally and offers an efficient gateway for people to retrieve files from arweave.
 images: ['/static/images/old-blog/1_NnfoDvn5iPsgsO5c1aXiww.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
