--- a/data/blog/2021-12-01-matters-lab-launches-collaboration-with-meson-network.mdx
+++ b/data/blog/2021-12-01-matters-lab-launches-collaboration-with-meson-network.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/1_kNmPpxY5BW3S9va9RLHORg.png']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
