--- a/data/blog/2021-12-01-permacast-integrates-meson-to-load-assets-at-2x-speed.mdx
+++ b/data/blog/2021-12-01-permacast-integrates-meson-to-load-assets-at-2x-speed.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/1_wiRUfPr5q42KzO3Bbb6QxQ.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
