--- a/data/blog/2021-12-10-monster-battle-gamefi-launches-collaboration-with-meson-network.mdx
+++ b/data/blog/2021-12-10-monster-battle-gamefi-launches-collaboration-with-meson-network.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/1_hUC6CC4wOq2ZQTCl4sj4Mw.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
