--- a/data/blog/2022-02-19-showme-launches-collaboration-with-meson-network.mdx
+++ b/data/blog/2022-02-19-showme-launches-collaboration-with-meson-network.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'CyberConnect × Meson Network: Supporting the social graph in Web3'
+title: 'ShowMe launches collaboration with Meson Network'
 date: '2022-02-19'
 tags: ['Meson', 'Ecosystem']
 draft: false
 summary:
 images: ['/static/images/old-blog/1_RwUMqGoAvIY8BJrCDHRxzg.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
