--- a/data/blog/2022-03-16-cyberconnect-partners-with-meson-network.mdx
+++ b/data/blog/2022-03-16-cyberconnect-partners-with-meson-network.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/1_NnMLZ0ziVGjmobjYR46p8w.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
