--- a/data/blog/2022-03-24-rss3-meson-network-supporting-the-open-information-syndication-protocol-in-web3.mdx
+++ b/data/blog/2022-03-24-rss3-meson-network-supporting-the-open-information-syndication-protocol-in-web3.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/1_M0Cp0Cd19Sk3VpB-Cx-98A.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
