--- a/data/blog/2022-08-08-port3-network-meson-network-supporting-the-gateway-to-web3-social-graph.mdx
+++ b/data/blog/2022-08-08-port3-network-meson-network-supporting-the-gateway-to-web3-social-graph.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/1_RtMMgmBURKjpeeUdyqUO4g.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
