--- a/data/blog/2022-08-11-ultiverse-meson-network-supporting-the-social-gaming-metaverse-in-web3.mdx
+++ b/data/blog/2022-08-11-ultiverse-meson-network-supporting-the-social-gaming-metaverse-in-web3.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/1_dwov4Wp7hG500h7L6O0vfQ.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
