--- a/data/blog/2022-08-17-decent-land-meson-network-supporting-the-social-infrastructure-for-web3.mdx
+++ b/data/blog/2022-08-17-decent-land-meson-network-supporting-the-social-infrastructure-for-web3.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/1_h8s2gfXfF4vAXfZk2UIGDg.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
