--- a/data/blog/2022-11-07-okx-chain-meson-network-bringing-dcdn-to-the-forefront-of-web3.mdx
+++ b/data/blog/2022-11-07-okx-chain-meson-network-bringing-dcdn-to-the-forefront-of-web3.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/1_GYWAeGrcsPi7fLwHoozGFw.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
