--- a/data/blog/2022-12-07-Tokenomics-Beta1.mdx
+++ b/data/blog/2022-12-07-Tokenomics-Beta1.mdx
@@ -3,7 +3,7 @@ title: 'Tokenomics Beta1'
 date: '2022-12-07'
 tags: ['Meson Labs', 'Tokenomics', 'Beta1']
 draft: false
-summary: We are ready to release the Tokenomics-Beta1 and apply it on the Meson Testnet.
+summary: Since the launch of the Meson Testnet, we have gone through several major iterations. The level of miner participation and network usages have far exceeded our expectations, and we are grateful for it. As a result, we are ready to release the Tokenomics-Beta1 and apply it on the Meson Testnet. The following contains information on several key modules and issues. Since the crypto world is still relatively early and rapidly progressing, our model may be subject to further improvements and parameter adjustments based on actual data collected throughout the testing period. Enjoy.
 images: ['/static/images/tokenomics-beta1/ex-m1.jpeg']
 layout: PostLayout
 authors: ['meson-labs']
