--- a/data/blog/2023-03-02-eth-radio-high-availability-ens-gateway.mdx
+++ b/data/blog/2023-03-02-eth-radio-high-availability-ens-gateway.mdx
@@ -3,7 +3,7 @@ title: 'ETH.Radio: High availability ENS Gateway'
 date: '2023-03-02'
 tags: ['Meson', 'ENS']
 draft: false
-summary: ETH.Radio is a high-availability Ethereum Name Service (ENS) gateway
+summary: ETH.Radio is a high-availability Ethereum Name Service (ENS) gateway. It represents a significant step towards the adoption of the decentralized web (dweb) by offering a new way to access ENS resolvable domains. Prior to the launch of ETH.Radio, services such as Cloudflare’s eth.link and the community-driven eth.limo were the primary means of bridging the gap between Web2 and Web3.
 images: ['/static/images/old-blog/1_Yjac6zyyBJTeiFVuJfspHg.png']
 layout: PostLayout
 authors: ['default']
