--- a/data/blog/2021-12-07-nftscan-partners-with-meson-network-on-web-3-0-dcdn-solution.mdx
+++ b/data/blog/2021-12-07-nftscan-partners-with-meson-network-on-web-3-0-dcdn-solution.mdx
@@ -6,7 +6,7 @@ draft: false
 summary:
 images: ['/static/images/old-blog/0_A5k1CrLPC6-wvKSG.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
