--- a/data/blog/2022-11-29-zkcross-meson-network-a-one-stop-entrance-to-zkcross-ecosystem.mdx
+++ b/data/blog/2022-11-29-zkcross-meson-network-a-one-stop-entrance-to-zkcross-ecosystem.mdx
@@ -1,12 +1,12 @@
 ---
 title: 'ZKCross × Meson Network: A One-stop Entrance to ZKCross Ecosystem'
-date: '2022-08-17'
+date: '2022-11-29'
 tags: ['Meson', 'Ecosystem']
 draft: false
 summary:
 images: ['/static/images/old-blog/1_atOHIhxv0TmQhrAF-CbSEA.webp']
 layout: PostLayout
-authors: ['default']
+authors: ['meson-ecosystem']
 departments: 'Meson Network'
 ---
 
