--- a/data/blog/2021-11-26-bca-network-partners-with-meson-network-on-web3-0-decentralized-bandwidth-solution.mdx
+++ b/data/blog/2021-11-26-bca-network-partners-with-meson-network-on-web3-0-decentralized-bandwidth-solution.mdx
@@ -7,7 +7,7 @@ summary: Meson Network and BCA Network have reached a strategic partnership on
 images: ['/static/images/old-blog/1_NnfoDvn5iPsgsO5c1aXiww.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 ![](/static/images/old-blog/1_NnfoDvn5iPsgsO5c1aXiww.webp)
