--- a/data/blog/2021-12-01-matters-lab-launches-collaboration-with-meson-network.mdx
+++ b/data/blog/2021-12-01-matters-lab-launches-collaboration-with-meson-network.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_kNmPpxY5BW3S9va9RLHORg.png']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 ![](/static/images/old-blog/1_kNmPpxY5BW3S9va9RLHORg.png)
