--- a/data/blog/2021-12-01-permacast-integrates-meson-to-load-assets-at-2x-speed.mdx
+++ b/data/blog/2021-12-01-permacast-integrates-meson-to-load-assets-at-2x-speed.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_wiRUfPr5q42KzO3Bbb6QxQ.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 Web3 Podcast hosting platform **_[Permacast](https://permacast.net/)_**’s latest deployment replaced references to arweave.net with a custom Meson Network endpoint URL which provides decentralized caching across over **_30,000 nodes_**. Assets such as the Podcast cover art and audio files themselves are accelerated, decreasing the load time from 249ms with [arweave.net](http://arweave.net/) to just **_113ms_** using Meson Network.
