--- a/data/blog/2021-12-07-nftscan-partners-with-meson-network-on-web-3-0-dcdn-solution.mdx
+++ b/data/blog/2021-12-07-nftscan-partners-with-meson-network-on-web-3-0-dcdn-solution.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/0_A5k1CrLPC6-wvKSG.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 [Meson Network](https://meson.network/) and [NFTScan](https://nftscan.com/) have reached a strategic partnership — By integrating Meson Network dCDN solution, NFTscan explorer is obtaining a much larger real-time bandwidth and the permanent content accelerating paths for all kinds of digital assets on its NFT explorer and other products, to facilitate all users the best experience in Web 3.0. With more than 30,000 nodes globally, Meson Network dCDN solution has been continually recognized as a highly efficient gateway to retrieve files from [arweave](https://www.arweave.org/) & ipfs.
