--- a/data/blog/2021-12-10-monster-battle-gamefi-launches-collaboration-with-meson-network.mdx
+++ b/data/blog/2021-12-10-monster-battle-gamefi-launches-collaboration-with-meson-network.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_hUC6CC4wOq2ZQTCl4sj4Mw.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 [Meson Network](http://meson.network/) and GameFi powerhouse [Monster Battle](https://www.monster-battle.games/) have reached a strategic partnership. The *two parties will jointly* explore the possibility of technology integration and jointly build Web*3 infrastructure*.
