--- a/data/blog/2022-02-19-showme-launches-collaboration-with-meson-network.mdx
+++ b/data/blog/2022-02-19-showme-launches-collaboration-with-meson-network.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_RwUMqGoAvIY8BJrCDHRxzg.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 [ShowMe](https://showme.fan/) is **_a subscription NFT social network built on Web3_**. The core function is **_subscription_** + **_PONA._** Subscription supports anyone can create their Club without permission to make their community. **_PONA (Proof of NFT Achievements)_** aims to allow users to NFT the data between each other.
