--- a/data/blog/2022-03-24-rss3-meson-network-supporting-the-open-information-syndication-protocol-in-web3.mdx
+++ b/data/blog/2022-03-24-rss3-meson-network-supporting-the-open-information-syndication-protocol-in-web3.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_M0Cp0Cd19Sk3VpB-Cx-98A.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 Many third-party applications will request [RSS3](https://rss3.io/) for static resources. Therefore, maintaining a high standard of stability on Content Delivery Networks is critical for the team. By integrating [Meson Network](https://meson.network/)’s **_decentralized CDN_**, now RSS3 could not only accelerate static files and content in a faster way keep a premium customer experience but has also achieved a fully decentralized networks frame.
