--- a/data/blog/2022-08-08-port3-network-meson-network-supporting-the-gateway-to-web3-social-graph.mdx
+++ b/data/blog/2022-08-08-port3-network-meson-network-supporting-the-gateway-to-web3-social-graph.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_RtMMgmBURKjpeeUdyqUO4g.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 We’re thrilled to announce that [Port3 Network](https://www.port3.io/), the Gateway to Web3 Social Graph, partners with [Meson Network](https://meson.network/) — the bottom-up paradigm in building a bandwidth marketplace, to facilitate both projects and the communities with greater web3 experiences.
