--- a/data/blog/2022-08-11-ultiverse-meson-network-supporting-the-social-gaming-metaverse-in-web3.mdx
+++ b/data/blog/2022-08-11-ultiverse-meson-network-supporting-the-social-gaming-metaverse-in-web3.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_dwov4Wp7hG500h7L6O0vfQ.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 **[Ultiverse](https://www.ultiverse.io/)**, the most leading Web3 game development company, has reached a strategic partnership with **[Meson Network](https://meson.network/)**, the largest bandwidth marketplace on Web3, including adopting decentralized CDN to build a more fascinating and immersive social gaming metaverse. Within this collaboration, Ultiverse team has committed to integrate Meson CDN to **_host all images used in the game_**, while the metadata of NFT stored on IPFS will be accelerated by Meson CDN as well. Meson integration will enable Ultiverse with a larger real-time bandwidth and the permanent content accelerating paths by the fully decentralized CDN service, in the counterpart Meson team also committed to support the launch of Ultiverse’s Terminus City and Endless Loop in the coming months, jointly exploring more creative engagement includes embedding Meson exposure in the metaverse and offering nodes management service for all players entered.
