--- a/data/blog/2022-08-17-decent-land-meson-network-supporting-the-social-infrastructure-for-web3.mdx
+++ b/data/blog/2022-08-17-decent-land-meson-network-supporting-the-social-infrastructure-for-web3.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_h8s2gfXfF4vAXfZk2UIGDg.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 ![](/static/images/old-blog/1_h8s2gfXfF4vAXfZk2UIGDg.webp)
