--- a/data/blog/2022-11-07-okx-chain-meson-network-bringing-dcdn-to-the-forefront-of-web3.mdx
+++ b/data/blog/2022-11-07-okx-chain-meson-network-bringing-dcdn-to-the-forefront-of-web3.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_GYWAeGrcsPi7fLwHoozGFw.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 **OKC (OKX Chain)** is an **EVM-compatible** L1 built on Cosmos with a focus on true interoperability (IBC) and maximized performance, and has officially added **Meson Network** as an infrastructure network partner into its ecosystem.
