--- a/data/blog/2022-11-29-zkcross-meson-network-a-one-stop-entrance-to-zkcross-ecosystem.mdx
+++ b/data/blog/2022-11-29-zkcross-meson-network-a-one-stop-entrance-to-zkcross-ecosystem.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_atOHIhxv0TmQhrAF-CbSEA.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 ZKCross is the first Multichain zkRollup execution layer utilizing zkWASM and has officially added Meson Network to its ecosystem as an infrastructure network partner. Meson Powers ZKCross for Cyber Privacy in the Metaverse and accelerate content through Meson’s dCDN which enables the data transmission to be based on complete decentralization, mitigating the risk of trusting centralized CDNs.
