--- a/data/blog/2022-03-16-cyberconnect-partners-with-meson-network.mdx
+++ b/data/blog/2022-03-16-cyberconnect-partners-with-meson-network.mdx
@@ -7,7 +7,7 @@ summary:
 images: ['/static/images/old-blog/1_NnMLZ0ziVGjmobjYR46p8w.webp']
 layout: PostLayout
 authors: ['meson-ecosystem']
-departments: 'Meson Network'
+departments: 'Ecosystem'
 ---
 
 ![](/static/images/old-blog/1_NnMLZ0ziVGjmobjYR46p8w.webp)
