--- a/data/blog/2023-08-11-rediscovering-depin-bidding-farewell-to-hardware-constraints.mdx
+++ b/data/blog/2023-08-11-rediscovering-depin-bidding-farewell-to-hardware-constraints.mdx
@@ -23,17 +23,17 @@ Let's take a retrospective look at the history of the cypherpunks movement. In 1
 
 In 2003, a significant transformation unfolded with Linksys' release of the open-source embedded Linux OS, OpenWRT, marking the onset of the "Flashing to Firmware" era for wireless routers. OpenWRT's impact stretched into the realm of IoT, enabling devices to shed their original operating systems and embrace openness by flashing to OpenWRT firmware. Notably, in the domain of blockchain mining hardware, such as BITMAIN's Antminer and Helium Miners, these devices reaped the benefits of OpenWRT's flexibility.
 
-| ![Ken Thompson and Dennis Ritchie at PDP-11](/static/images/rediscovering-depin-bidding-farewell-to-hardware-constraints/antminer-s1.png) |
-| :---------------------------------------------------------------------------------------------------------------------------------------: |
-|                                 _[Bitmain Antminer S1 OpenWRT wiki](https://openwrt.org/toh/bitmain/s1)_                                  |
+| ![Bitmain Antminer S1 OpenWRT wiki](/static/images/rediscovering-depin-bidding-farewell-to-hardware-constraints/antminer-s1.png) |
+| :------------------------------------------------------------------------------------------------------------------------------: |
+|                             _[Bitmain Antminer S1 OpenWRT wiki](https://openwrt.org/toh/bitmain/s1)_                             |
 
 Moving forward to 2008, Bitcoin continued to uphold the cypherpunk ethos. While perusing the bitcointalk forum, it's evident that Bitcoin mining evolved from CPU to GPU and FPGA, culminating in the widely recognized ASIC miners. During this nearly four-year span, the development of Bitcoin mining devices was entirely community-driven. Consider for a moment the alternative scenario: if Satoshi Nakamoto had announced that only officially authorized mining devices could participate in Bitcoin shortly after its release, the absurdity of such a notion becomes clear. This period highlights the organic, decentralized nature of the cryptocurrency community's innovation, contrasting with a centralized approach that could have stifled its growth.
 
 As of 2023, it's remarkable to observe on YouTube that many Bitcoin miners are still utilizing the decade-old Bitmain Antminer U1 for Bitcoin mining. This underscores that while major players chase higher computational power, the presence of small-scale miners remains vital, able to participate in the Bitcoin network at low costs. This fact is undeniably exciting, highlighting the inclusive nature of Bitcoin's ecosystem, where both large and small miners coexist, contributing to the network's resilience and decentralization.
 
-| ![Ken Thompson and Dennis Ritchie at PDP-11](/static/images/rediscovering-depin-bidding-farewell-to-hardware-constraints/aEMh4esWBU.png) |
-| :--------------------------------------------------------------------------------------------------------------------------------------: |
-|                         _[AntMiner USB Stick](https://www.youtube.com/results?search_query=AntMiner+USB+Stick)_                          |
+| ![AntMiner USB Stick](/static/images/rediscovering-depin-bidding-farewell-to-hardware-constraints/aEMh4esWBU.png) |
+| :---------------------------------------------------------------------------------------------------------------: |
+|              _[AntMiner USB Stick](https://www.youtube.com/results?search_query=AntMiner+USB+Stick)_              |
 
 While assisting Meson Network miners, I've also encountered moments that filled me with excitement. One instance that left a lasting impression was when I communicated with a miner from the United States. During our conversation, I learned that they were using a Raspberry Pi 2 paired with a USB 2.0 flash drive, along with port forwarding, to run a Meson node. This unconventional setup proved to be perfectly viable. This experience underscored the adaptability of the Meson Network and, later on, influenced the design of the GaGaNode project. The fact that arm devices were included in the development plan showcases the significance of a thriving community in the success of a Depin project.
 
@@ -43,12 +43,16 @@ Certainly, here's a summary of the points to consider regarding DePIN:
 
 **Second, the decoupling of software and hardware is a critical consideration.** Bundling software with hardware is a trait typically found in applications steered by centralized enterprises (such as the Mac system). For DePIN to succeed, it must ensure significant decoupling between software and hardware, allowing software to define everything much like Bitcoin.This decoupling facilitates DePIN's decentralized distributed deployment vision. Both Meson and GaGaNode advocate utilizing idle resources for network participation. The decentralized nature of Meson nodes is evident from its [explorer](https://explorer.Meson.network:1984/). This setup means you might be served by a miner in Nigeria, harnessing their idle equipment.
 
-| ![Ken Thompson and Dennis Ritchie at PDP-11](/static/images/rediscovering-depin-bidding-farewell-to-hardware-constraints/Meson-nodes.png) |
-| :---------------------------------------------------------------------------------------------------------------------------------------: |
-|                                         _[Meson Explorer](https://explorer.Meson.network:1984/)_                                          |
+| ![Meson Explorer](/static/images/rediscovering-depin-bidding-farewell-to-hardware-constraints/Meson-nodes.png) |
+| :------------------------------------------------------------------------------------------------------------: |
+|                            _[Meson Explorer](https://explorer.Meson.network:1984/)_                            |
 
 **Third, establishing robust Real-World Asset (RWA) mapping channels is crucial.** Bridging the gap between the digital and physical worlds is a focus. Meson's effort lies in standardizing bandwidth, gauging performance through benchmarking metrics (such as latency, throughput, and service quality). This enhances the operation of Meson Exchange with greater clarity and efficiency. This standardization empowers buyers to make informed decisions and encourages fair competition among sellers, ultimately benefiting all market participants. Further insights can be obtained from the [Meson Vector Plan](https://blog.Meson.network/blog/2023-07-12-Meson-Vector-Plan-V1).
 
-We can learn from [The Round Up](https://theroundup.org/global-e-waste-statistics/) report that by 2023, there will be over 347 Mt of unrecovered electronic waste on Earth. Does this mean that these 347 Mt of discarded electronic devices can be reclaimed and reused?
+We can learn from [The Round Up](https://theroundup.org/global-e-waste-statistics/) report that by 2023, there will be over **347 Mt** of unrecovered electronic waste on Earth. Does this mean that these **347 Mt** of discarded electronic devices can be reclaimed and reused?
+
+| ![Latest Global E-Waste Statistics And What They Tell Us](/static/images/rediscovering-depin-bidding-farewell-to-hardware-constraints/e-waste.png) |
+| :------------------------------------------------------------------------------------------------------------------------------------------------: |
+|                   _[Latest Global E-Waste Statistics And What They Tell Us](https://theroundup.org/global-e-waste-statistics/)_                    |
 
 Meson Network has been closely attentive to carbon emissions research. Therefore, the journey from Meson to GaGaNode has seen the barrier of entry for users transformed from a minor threshold to now being completely barrier-free. This transformation aims to assist those with idle electronic devices in giving them a new lease on life. The aspiration is to encourage more DePIN participants to address the increasing environmental damage caused by the mounting electronic waste. Leveraging the power of DePIN to bring about positive change in the world.
