--- a/data/blog/2023-09-08-meson-network-and-aws-collaborate-to-transform-web3-infrastructure.mdx
+++ b/data/blog/2023-09-08-meson-network-and-aws-collaborate-to-transform-web3-infrastructure.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Lighthouse × Meson Network: The Unleashing High-Availability Content Delivery Solution'
+title: 'Meson Network and AWS Collaborate to Transform Web3 Infrastructure'
 date: '2023-09-08'
 tags: ['Meson', 'Ecosystem']
 draft: false
-summary: This discourse encompasses concerns of hardware dependencies, historical milestones, and Meson Network's emphasis on infrastructure, bridging digital-physical gaps, culminating in a plea to tackle electronic waste, encapsulating DePIN's transformative potential.
+summary: Meson Network has officially announced its partnership with AWS, a development aimed at simplifying the process for companies and developers to launch the Meson Network.
 images: ['/static/images/ecosystem/meson-aws.png']
 layout: PostLayout
 authors: ['meson-ecosystem']
