--- a/data/blog/2023-10-13-klaytn-foundation-x-meson-network-enhancing-digital-approach-in-web3.mdx
+++ b/data/blog/2023-10-13-klaytn-foundation-x-meson-network-enhancing-digital-approach-in-web3.mdx
@@ -26,7 +26,7 @@ Beyond the realm of content distribution, this partnership introduces added conv
 
 Klaytn and Meson Network have joined forces to enhance efficiency, transparency, and security in the digital realm. With Klaytn's unwavering commitment to transparency and community engagement and Meson Network's specialization in decentralized CDN services and bandwidth standardization, this partnership is poised to create a more robust digital ecosystem.
 
-### **About Analog**
+### **About Klaytn Foundation**
 
 Developed by leading Korean IT company Kakao, Klaytn is a global Layer 1 public blockchain designed to power tomorrow’s on-chain world. With the lowest transaction latency amongst leading blockchains, enterprise-grade reliability, and a developer-friendly environment, Klaytn provides a seamless experience for users and developers that is second to none. Since its launch in June 2019, Klaytn has been accelerating blockchain mass adoption through a broad array of use cases from DeFi to real-world assets, entertainment and gaming, and even the Bank of Korea’s CBDC pilot project. Today, it is one of the only globally competitive Web 3.0 ecosystems developed in South Korea, generating more than 1 billion transactions from over 300 decentralized applications.
 
