--- a/data/blog/2021-02-03-meson-token-metrics-economics.mdx
+++ b/data/blog/2021-02-03-meson-token-metrics-economics.mdx
@@ -18,21 +18,13 @@ departments: 'Meson Network'
 
 ### **Token Distribution**
 
-**Seed Token Sale**: 6,000,000 Meson (6%)
-
-**Private Token Sale:** 22,000,000 Meson (22%)
-
-**Public Token Sale:** 10,000,000 Meson (10%)
-
-**Community & Ecosystem**: 20,000,000 Meson (20%)
-
-**Foundation Reservation**: 20,000,000 Meson (20%)
-
-**Technical Team**: 15,000,000 Meson (15%)
-
-**Partners:** 6,000,000 Meson (6%)
-
-**Test-Net Mapping:** 1,000,000 Meson (1%)
+- Private Token Sale: 26,000,000 MSN (26%)
+- Public Token Sale: 5,000,000 MSN (5%)
+- Ecosystem: 27,000,000 MSN (27%)
+- Foundation Reservation: 20,000,000 MSN (20%)
+- Technical Team: 15,000,000 MSN (15%)
+- Partners: 6,000,000 MSN (6%)
+- Test-Net Mapping: 1,000,000 MSN (1%)
 
 ![](img/1_h-WKWe0iwdqocSYBQib22g.png)
 
@@ -50,7 +42,7 @@ Tokens sold in the Private Round will be linearly unlocked monthly over 12 month
 
 TestNet Tokens [All products together under meson e.g Meson3.0 ,GAGA, .etc] will be mapped to 1% of all the tokens on MainNet and are directly circulating after the MainNet goes live.
 
-![](img/1_y5kT50AE7-NY0gAEDItNvw.png)
+![](/static/images/old-blog/tokenomics-04.svg)
 
 ### **Token Functions**
 
